OAKHILL/src/objects/Investor_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Balance_Statement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Balance Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Capital_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Capital Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Investor Contacts</relationshipLabel>
        <relationshipName>Investor_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Estimate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Estimate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Investment__c</fullName>
        <label>Investment</label>
        <referenceTo>Related_Account__c</referenceTo>
        <relationshipLabel>Investor Contacts</relationshipLabel>
        <relationshipName>Investor_Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>K1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>K1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthly_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monthly Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Investor_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Investor Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quarterly_Letter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quarterly Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Id , &quot;View&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Investor Contact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IC-{00000}</displayFormat>
        <label>Investor Contacts Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investor Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>